--- a/content/index.njk
+++ b/content/index.njk
@@ -93,19 +93,19 @@ eleventyNavigation:
 	</div>
 </section>
 
-<section id="programs">
+
+
+<section id="programs" class="alt_bg" >
 	<div class="container">
-	<h2>Accredited Programs</h2>
-	<div class="card h-100 py-2">
-		<div class="card-body">
-		  <img src="/img/WCU-Logo-png.png" class="float-start p-3" alt="Western Carolina University">
-		  <div class="text-center">
-		  <h3><a href="https://www.wcu.edu/learn/departments-schools-colleges/ceap/stl/special-education-programs/university-participant-up-program/index.aspx">Western Carolina University UP Program</a></h3>
-		</div>
-	  </div>
+	<h3>Accredited Programs</h3>
+	<div class="row">
+
+	<div class="col-lg border text-center"> <img src="/img/WCU-Logo-png.png" alt="Western Carolina University"class="img-fluid"></div>
+	
+	<div class="col-lg border "><h3><a href="https://www.wcu.edu/learn/departments-schools-colleges/ceap/stl/special-education-programs/university-participant-up-program/index.aspx">Western Carolina University UP Program</a></h3> </div>
+	</div>
 	</div>
 </section>
-
 
 <section id="board">
 	<div class="container">
