new menu and meta data

--- a/content/index.njk
+++ b/content/index.njk
@@ -97,13 +97,15 @@ eleventyNavigation:
 
 <section id="programs" class="alt_bg" >
 	<div class="container">
-	<h3>Accredited Programs</h3>
+	<h2>Accredited Programs</h2>
+	<hr>
 	<div class="row">
 
-	<div class="col-lg border text-center"> <img src="/img/WCU-Logo-png.png" alt="Western Carolina University"class="img-fluid"></div>
+	<div class="col-lg  text-center"> <img src="/img/WCU-Logo-png.png" alt="Western Carolina University"class="img-fluid"></div>
 	
-	<div class="col-lg border "><h3><a href="https://www.wcu.edu/learn/departments-schools-colleges/ceap/stl/special-education-programs/university-participant-up-program/index.aspx">Western Carolina University UP Program</a></h3> </div>
+	<div class="col-lg p-3 "><h3><a href="https://www.wcu.edu/learn/departments-schools-colleges/ceap/stl/special-education-programs/university-participant-up-program/index.aspx">Western Carolina University UP Program</a></h3> </div>
 	</div>
+	<hr>
 	</div>
 </section>
 
@@ -166,7 +168,7 @@ eleventyNavigation:
 
 <section id="partners" class="alt_bg" >
 	<div class="container">
-	<h3>Partners</h3>
+	<h2>Partners</h2>
 	<div class="row">
 
 	<div class="col-lg border text-center"> <a href="https://thinkcollege.net/projects/ncc"><img alt="National Coordinating Center" src="/img/NCC_logo_300x200.png" class="img-fluid"></a></div>
@@ -176,3 +178,4 @@ eleventyNavigation:
 	</div>
 </section>
 
+ 
