--- a/content/index.njk
+++ b/content/index.njk
@@ -23,7 +23,7 @@ eleventyNavigation:
 
 	</div>
 	<div class="col-lg-4"> <div class="card call_out"><div class="card-body">
-		<p class="lead">You can learn more information about how to prepare for program accreditation </p> <!-- Button trigger modal -->
+		<p class="lead">For more information about IHEAC</p> <!-- Button trigger modal -->
 		<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#contactModal">
 		  Get In Touch
 		</button>
