changes from spreadsheet

--- a/content/index.njk
+++ b/content/index.njk
@@ -7,23 +7,27 @@ eleventyNavigation:
 ---
 <section id="intro" class="alt_bg">
 	<div class="container">
+		<h2>About the Council </h2>
+		<p>The Inclusive Higher Education Accreditation Council (IHEAC) is an independent accrediting agency for college and university programs who serve students with intellectual disability (ID). The purpose of the IHEAC is to promote standards-based quality programming for students with ID who attend colleges and universities. The agency is approved as a <a href="/img/501c3.pdf">tax-exempt organization</a> under Section 501(c)(3) of the U.S. Internal Revenue Code.</p>
 
-<h2>Quality Programs are Vital to Student Success </h2>
-<p>Program accreditation provides an opportunity to demonstrate quality assurance and programming. Accreditation also provides legitimacy for programs that meet the standards and guidelines for colleges and universities who are considering establishing quality programs for students with intellectual disability (ID). In addition, programs are able to show how they support student success through completion and graduation rates.</p>
 <hr>
 <div class="row">
 	
 	<div class="col-lg-8">
-<h3>Program Accreditation Standards </h3>
+<h2>Program Accreditation Standards </h2>
 
-<p>The Program Accreditation Standards are designed to help programs ensure that they meet quality assurance standards in the field of inclusive higher education. The standards address key areas of college and university programming related to student outcomes and individualized supports. Programs that become accredited demonstrate a level of quality programming for students with ID. Learn more about the <a href="https://thinkcollege.net/sites/default/files/files/TCreport_accred_modelstandards_2021.pdf"> standards and how your program can begin preparing for accreditation.</a>  </p>
+<p>The Program Accreditation Standards are designed to help programs ensure that they meet quality assurance standards in the field of inclusive higher education. The standards address key areas of college and university programming related to student outcomes and individualized supports. Programs that become accredited demonstrate a level of quality programming for students with ID. Learn more about the  standards and how your program can begin preparing for accreditation: </p>
+<ul>
+	<li><a href="https://thinkcollege.net/resource/program-accreditation/program-accreditation-standards-guidance-and-evidence-requirements">Program Accreditation Standards, Guidance and Review Requirements</a></li>
+	<li><a href="https://thinkcollege.net/think-college-news/tools-to-explore-the-program-accreditation-standards">Tools for Preparing for Program Accreditation</a></li>
+</ul>
 <hr>
-<h3>About the Council </h3>
-<p>The Inclusive Higher Education Accreditation Council (IHEAC) is an independent accrediting agency for college and university programs who serve students with intellectual disability (ID). The purpose of the IHEAC is to promote standards-based quality programming for students with ID who attend colleges and universities. The agency is approved as a <a href="/img/501c3.pdf">tax-exempt organization</a> under Section 501(c)(3) of the U.S. Internal Revenue Code.</p>
+<h2>Quality Programs are Vital to Student Success </h2>
+<p>Program accreditation provides an opportunity to demonstrate quality assurance and programming. Accreditation also provides legitimacy for programs that meet the standards and guidelines for colleges and universities who are considering establishing quality programs for students with intellectual disability (ID). In addition, programs are able to show how they support student success through completion and graduation rates.</p>
 
 	</div>
 	<div class="col-lg-4"> <div class="card call_out"><div class="card-body">
-		<p class="lead">For more information about IHEAC</p> <!-- Button trigger modal -->
+		<p class="lead">Contact us for more information about IHEAC</p> <!-- Button trigger modal -->
 		<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#contactModal">
 		  Get In Touch
 		</button>
@@ -99,11 +103,9 @@ eleventyNavigation:
 	<div class="container">
 	<h2>Accredited Programs</h2>
 	<hr>
-	<div class="row">
-
-	<div class="col-lg  text-center"> <img src="/img/WCU-Logo-png.png" alt="Western Carolina University"class="img-fluid"></div>
+	<img src="/img/WCU-Logo-png.png" alt="Western Carolina University" >
 	
-	<div class="col-lg p-3 "><h3><a href="https://www.wcu.edu/learn/departments-schools-colleges/ceap/stl/special-education-programs/university-participant-up-program/index.aspx">Western Carolina University UP Program</a></h3> </div>
+	<h3><a href="https://www.wcu.edu/learn/departments-schools-colleges/ceap/stl/special-education-programs/university-participant-up-program/index.aspx">Western Carolina University UP Program</a></h3> 
 	</div>
 	<hr>
 	</div>
