--- a/public/css/ici.css
+++ b/public/css/ici.css
@@ -98,12 +98,13 @@ header h2.h3 {color: grey;
   }
   
   main {padding-top: 1.5em;}
+  main a {color:#1D537D !important; text-decoration: underline !important;}
   section {padding-top: 1em; padding-bottom: 3em; margin-bottom: 5em; border-top: 2px solid transparent;
     border-image: linear-gradient(0.25turn, rgba(205, 109, 39, 0), #86A27C, rgba(56,2,155,0));
     border-image-slice: 1;
     width:100%;} 
-    main :is(h1, h2, h3, h4, h5, h6) {letter-spacing: .17rem;}
-  #board img {max-width: 200px;}
+
+    #board img {max-width: 200px;}
 
   .btn-primary {background-color: #1D537D; font-weight: bold;}
   .call_out {
@@ -113,12 +114,12 @@ header h2.h3 {color: grey;
     border: 4px solid transparent;
   }
 
-  .alt_bg {background-color: #F7F7F8}
+  .alt_bg {background-color: #f9f9f9}
  
-  footer {background-color: #86A27C; color:white;}
+  footer {background-color: #1D537D; color:white; font-size: 20px;}
   footer a {color: white;}
   #partners img {max-width: 250px; margin: 1em;}
-  #programs img {max-width: 250px; margin: 1em;}
+  #programs img {max-width: 125px; margin: 1em;}
 
   
 
