--- a/content/index.njk
+++ b/content/index.njk
@@ -102,7 +102,7 @@ eleventyNavigation:
 <section id="programs" class="alt_bg" >
 	<div class="container">
 	<h2>Accredited Programs</h2>
-	<p>Programs are determined to be accredited, provisionally accredited, or not accredited. Learn about <a href="/img/IHEAC-Accreditation-Determination-adopted-5-3-23.pdf">the criteria for each of these accreditation determinations here</a>.</p>
+	<p>Programs are determined to be accredited, provisionally accredited, or not accredited. Learn about <a href="/img/IHEAC-Accreditation-Determination-adopted-5-3-23.pdf">the criteria for each of these accreditation determinations</a>.</p>
 	<hr>
 
 	<img src="/img/WCU-Logo-png.png" alt="Western Carolina University" >
