--- a/content/index.njk
+++ b/content/index.njk
@@ -148,7 +148,7 @@ eleventyNavigation:
 	  <div class="col pb-3">
 		<div class="card h-100 py-2">
 		  <div class="card-body">
-			<img src="/img/elise.png" class="float-start p-3" alt="Elise McMillan">
+			<img src="/img/Elise-vertical-2023.jpg" class="float-start p-3" alt="Elise McMillan">
 			<p class="card-text"><strong>Elise McMillan, JD, Clerk</strong>, is the Director of the Vanderbilt Kennedy University Center for Excellence in Developmental Disabilities (UCEDD), Elise McMillan has more than 20 years' experience in leading programs and projects that support individuals with intellectual and developmental disabilities, their families, and their communities. She holds leadership roles in numerous national, state, and community disabilities organizations, including, the Tennessee Council on Developmental  Disabilities, and the Disability Law and Advocacy Center of Tennessee.</p>
 		  </div>
 		</div>
