--- a/content/index.njk
+++ b/content/index.njk
@@ -75,6 +75,14 @@ eleventyNavigation:
 	<div class="container">
 		<h2>IHEAC in the News</h2>
 <hr>
+<article>
+	<h3 class="h5"><a href="https://weaveeducation.com/podcast/breaking-barriers-accrediting-for-inclusion-with-dr-martha-mock/">PODCAST - Breaking Barriers: Accrediting for Inclusion with Dr. Martha Mock</a></h3>
+	<blockquote>
+	On this episode, Dr. Martha Mock, professor and director of the Center for Disability and Education at University of Rochester and chair of Think College National Coordinating Center Accreditation Workgroup, joins us to share what the workgroup has been doing to develop and launch accrediting processes for these students.
+	
+	</blockquote>
+</article>
+<hr>
 		<article>
 			<h3 class="h5"><a href="/news/first/">Western Carolina University University Participant Program First Postsecondary Program for Students with Intellectual Disability to be Accredited by New Agency</a></h3>
 			<p><small>May 10, 2023</small></p>
