--- a/public/css/ici.css
+++ b/public/css/ici.css
@@ -132,3 +132,37 @@ header h2.h3 {color: grey;
   }
 }
   .nav-link {color:#1D537D !important; text-decoration: underline !important;}
+
+  blockquote{
+   
+    width:80%;
+   
+    font-style:italic;
+    
+    padding:1.2em 30px 1.2em 75px;
+    border-left:8px solid #1D537D ;
+    position: relative;
+    background:#f9f9f9;
+  }
+  
+  blockquote::before{
+    font-family:Arial;
+    content: "\201C";
+    color:#1D537D;
+    font-size:4em;
+    position: absolute;
+    left: 10px;
+    top:-10px;
+  }
+  
+  blockquote::after{
+    content: '';
+  }
+  
+  blockquote span{
+    display:block;
+    color:#333333;
+    font-style: normal;
+    font-weight: bold;
+    margin-top:1em;
+  }
