--- a/content/index.njk
+++ b/content/index.njk
@@ -8,7 +8,7 @@ eleventyNavigation:
 <section id="intro" class="alt_bg">
 	<div class="container">
 		<h2>About the Council </h2>
-		<p>The Inclusive Higher Education Accreditation Council (IHEAC) is an independent accrediting agency for college and university programs who serve students with intellectual disability (ID). The purpose of the IHEAC is to promote standards-based quality programming for students with ID who attend colleges and universities. The agency is approved as a <a href="/img/501c3.pdf">tax-exempt organization</a> under Section 501(c)(3) of the U.S. Internal Revenue Code.</p>
+		<p>The Inclusive Higher Education Accreditation Council (IHEAC) is an independent accrediting agency for college and university programs that serve students with ID. The IHEAC aims to promote standards-based quality programming for students with ID who attend colleges and universities. The agency is approved as a <a href="/img/501c3.pdf">tax-exempt organization</a> under Section 501(c)(3) of the U.S. Internal Revenue Code.</p>
 
 <hr>
 <div class="row">
@@ -23,7 +23,7 @@ eleventyNavigation:
 </ul>
 <hr>
 <h2>Quality Programs are Vital to Student Success </h2>
-<p>Program accreditation provides an opportunity to demonstrate quality assurance and programming. Accreditation also provides legitimacy for programs that meet the standards and guidelines for colleges and universities who are considering establishing quality programs for students with intellectual disability (ID). In addition, programs are able to show how they support student success through completion and graduation rates.</p>
+<p>Program accreditation provides an opportunity to demonstrate quality assurance and programming. Accreditation also provides legitimacy for programs that meet the standards and guidelines for colleges and universities considering establishing quality programs for students with intellectual disability (ID). In addition, programs can show how they support student success through completion and graduation rates.</p>
 
 	</div>
 	<div class="col-lg-4"> <div class="card call_out"><div class="card-body">
