--- a/content/index.njk
+++ b/content/index.njk
@@ -74,6 +74,12 @@ eleventyNavigation:
 <section id="news">
 	<div class="container">
 		<h2>IHEAC in the News</h2>
+		<hr>
+		<article>
+			<h3 class="h5"><a href="https://youtu.be/tlYwVkKYY6A">Accreditation conversation with Dr. Kelly Kelley and Dr. Mary Judge Diegert</a></h3>
+			<p><small>Jul 12, 2023</small><br>
+			Interview with Western Carolina University Up Program Director Kelly Kelley, PhD. Dr. Kelley provides insight and useful tips as the leader of the first accredited program.</p>
+		</article>
 <hr>
 <article>
 	<h3 class="h5"><a href="https://weaveeducation.com/podcast/breaking-barriers-accrediting-for-inclusion-with-dr-martha-mock/">PODCAST - Breaking Barriers: Accrediting for Inclusion with Dr. Martha Mock</a></h3>
@@ -111,14 +117,18 @@ eleventyNavigation:
 	<div class="container">
 	<h2>Accredited Programs</h2>
 	<p>Programs are determined to be accredited, provisionally accredited, or not accredited. Learn about <a href="/img/IHEAC-Accreditation-Determination-adopted-5-3-23.pdf">the criteria for each of these accreditation determinations</a>.</p>
-	<hr>
-
-	<img src="/img/WCU-Logo-png.png" alt="Western Carolina University" >
 	
-	<h3><a href="https://www.wcu.edu/learn/departments-schools-colleges/ceap/stl/special-education-programs/university-participant-up-program/index.aspx">Western Carolina University UP Program</a></h3> 
+	<div class="card" style="width: 18rem;">
+		<img src="/img/WCU-Logo-png.png" alt="Western Carolina University" class="card-img-top">
+		<div class="card-body">
+		  <h5 class="card-title"><a href="https://www.wcu.edu/learn/departments-schools-colleges/ceap/stl/special-education-programs/university-participant-up-program/index.aspx">Western Carolina University UP Program</a></h5>
+		  
+		</div>
+	  </div>
+
+	
 	</div>
-	<hr>
-	</div>
+	
 </section>
 
 <section id="board">
@@ -157,7 +167,7 @@ eleventyNavigation:
 		<div class="card h-100 py-2">
 		  <div class="card-body">
 			<img src="/img/Elise-vertical-2023.jpg" class="float-start p-3" alt="Elise McMillan">
-			<p class="card-text"><strong>Elise McMillan, JD, Clerk</strong>, is the Director of the Vanderbilt Kennedy University Center for Excellence in Developmental Disabilities (UCEDD), Elise McMillan has more than 20 years' experience in leading programs and projects that support individuals with intellectual and developmental disabilities, their families, and their communities. She holds leadership roles in numerous national, state, and community disabilities organizations, including, the Tennessee Council on Developmental  Disabilities, and the Disability Law and Advocacy Center of Tennessee.</p>
+			<p class="card-text"><strong>Elise McMillan, JD, Clerk</strong>, is the former Director of the Vanderbilt Kennedy University Center for Excellence in Developmental Disabilities (UCEDD), Elise McMillan has more than 20 years' experience in leading programs and projects that support individuals with intellectual and developmental disabilities, their families, and their communities. She holds leadership roles in numerous national, state, and community disabilities organizations, including, the Tennessee Council on Developmental  Disabilities, and the Disability Law and Advocacy Center of Tennessee.</p>
 		  </div>
 		</div>
 	  </div>
