--- a/_includes/news.njk
+++ b/_includes/news.njk
@@ -7,8 +7,9 @@
 
      
       <article>
+        
         <h3 class="h5"><a href="{{ news.data.url }}">{{ news.data.title }}</a></h3>
-        <p><small>{{ news.data.date  }} | {{ news.data.source }} | {{ news.data.author }}</small><br>
+        <p><small>  {% if news.data.date %} {{ news.data.date | postDate  }} {% endif %} {% if news.data.source %} | {{ news.data.source }} {% endif %} {% if news.data.author %} | {{ news.data.author }} {% endif %}</small><br>
         {{ news.data.summary }}</p>
       </article>
       <hr>
