--- a/content/index.njk
+++ b/content/index.njk
@@ -119,7 +119,8 @@ eleventyNavigation:
 	<p>Programs are determined to be accredited, provisionally accredited, or not accredited. Learn about <a href="/img/IHEAC-Accreditation-Determination-adopted-5-3-23.pdf">the criteria for each of these accreditation determinations</a>.</p>
 	
 	<div class="card" style="width: 18rem;">
-		<a href="https://www.wcu.edu/learn/departments-schools-colleges/ceap/stl/special-education-programs/university-participant-up-program/index.aspx" title="Western Carolina University UP Program"><img src="/img/WCU-Logo-png.png" alt="Western Carolina University" class="card-img-top"></a>
+	<center>
+		<a href="https://www.wcu.edu/learn/departments-schools-colleges/ceap/stl/special-education-programs/university-participant-up-program/index.aspx" title="Western Carolina University UP Program"><img src="/img/WCU-Logo-png.png" alt="Western Carolina University" class="card-img-top"></a></center>
 		<div class="card-body">
 		</div>
 	  </div>
