--- a/content/index.njk
+++ b/content/index.njk
@@ -66,6 +66,17 @@ eleventyNavigation:
 		</div>
 	</div>
  </div>
+ <br>
+ <div class="card call_out"><div class="card-body">
+	<p class="lead">The 2024 Guide to Accreditation for Higher Education Programs for Students with Intellectual Disability</p>
+	<a href="https://docs.communityinclusion.org/guide-to-accreditation-for-higher-ed-programs/overview/table-of-contents"  class="btn btn-primary" >
+	  Find the Guide Here
+	</a>
+
+</div>
+</div>
+ </div>
+ </div>
 </div>
 </div>
 	</div>
