--- a/content/index.njk
+++ b/content/index.njk
@@ -69,9 +69,12 @@ eleventyNavigation:
  <br>
  <div class="card call_out"><div class="card-body">
 	<p class="lead">The 2024 Guide to Accreditation for Higher Education Programs for Students with Intellectual Disability</p>
-	<a href="https://docs.communityinclusion.org/guide-to-accreditation-for-higher-ed-programs/overview/table-of-contents"  class="btn btn-primary" >
-	  Find the Guide Here
-	</a>
+	<p><a href="https://docs.communityinclusion.org/guide-to-accreditation-for-higher-ed-programs/overview/table-of-contents"  class="btn btn-primary" >
+	  Use the Web-Based Guide
+	</a></p>
+	<p><a href="/img/PDF-2024-accreditation-guide-.pdf"  class="btn btn-primary" >
+		Download the PDF
+	  </a></p>
 
 </div>
 </div>
