--- a/content/index.njk
+++ b/content/index.njk
@@ -18,7 +18,7 @@ eleventyNavigation:
 
 <p>The Program Accreditation Standards are designed to help programs ensure that they meet quality assurance standards in the field of inclusive higher education. The standards address key areas of college and university programming related to student outcomes and individualized supports. Programs that become accredited demonstrate a level of quality programming for students with ID. Learn more about the  standards and how your program can begin preparing for accreditation: </p>
 <ul>
-	<li><a href="https://thinkcollege.net/resource/program-accreditation/program-accreditation-standards-guidance-and-evidence-requirements">Program Accreditation Standards, Guidance and Review Requirements</a></li>
+	<li><a href="https://docs.communityinclusion.org/guide-to-accreditation-for-higher-ed-programs/section-3/program-standards-guidance-and-evidence-required-for-review">Program Accreditation Standards, Guidance and Review Requirements</a></li>
 	<li><a href="https://thinkcollege.net/think-college-news/tools-to-explore-the-program-accreditation-standards">Tools for Preparing for Program Accreditation</a></li>
 </ul>
 <hr>
