--- a/content/index.njk
+++ b/content/index.njk
@@ -138,8 +138,8 @@ eleventyNavigation:
 	<div class="container">
 	<h2>Accredited Programs</h2>
 	<p>Programs are determined to be accredited, provisionally accredited, or not accredited. Learn about <a href="/img/IHEAC-Accreditation-Determination-adopted-5-3-23.pdf">the criteria for each of these accreditation determinations</a>.</p>
-	
-	<div class="card" style="width: 18rem;">
+	<div class="grid-30">
+	<div class="card" >
 	<center>
 		<a href="https://www.wcu.edu/learn/departments-schools-colleges/ceap/stl/special-education-programs/university-participant-up-program/index.aspx" title="Western Carolina University UP Program"><img src="/img/WCU-Logo-png.png" alt="Western Carolina University" class="card-img-top"></a></center>
 		<div class="card-body">
@@ -147,7 +147,7 @@ eleventyNavigation:
 		</center>
 	  </div>
 
-	  <div class="card" style="width: 18rem;">
+	  <div class="card">
 		<center>
 			<a href="https://inclusiveservices.uccs.edu/" title="Office of Inclusive Services at the University of Colorado Colorado Springs"><img src="/img/UCCS_LOGO.jpeg" alt="Office of Inclusive Services at the University of Colorado Colorado Springs" class="card-img-top"></a></center>
 			<div class="card-body">
@@ -157,7 +157,7 @@ eleventyNavigation:
 
 	
 	</div>
-	
+	</div>
 </section>
 
 <section id="board">
