new news include

--- a/_includes/news.njk
+++ b/_includes/news.njk
@@ -3,13 +3,13 @@
 		<h2>IHEAC in the News</h2>
 		<hr>
 
-    {%- for news in collections.news -%}
+    {%- for news in collections.news | reverse -%}
      
       <article>
         
-        <h3 class="h5"><a href="{% if news.data.date %} {{ news.data.url }} {% endif %}">{{ news.data.title }}</a></h3>
+        <h3 class="h5"><a href="{% if news.data.url %} {{ news.data.url }}  {% else %} {{news.url}} {% endif %}">{{ news.data.title }}</a></h3>
         <p><small>  {% if news.data.date %} {{ news.data.date | postDate  }} {% endif %} {% if news.data.source %} | {{ news.data.source }} {% endif %} {% if news.data.author %} | {{ news.data.author }} {% endif %}</small><br>
-        {{ news.data.summary }}</p>
+        {{ news.data.summary | safe }}</p>
       </article>
       <hr>
     {%- endfor -%}
