--- a/content/index.njk
+++ b/content/index.njk
@@ -85,52 +85,7 @@ eleventyNavigation:
 	</div>
 </section>
 
-<section id="news">
-	<div class="container">
-		<h2>IHEAC in the News</h2>
-		<hr>
-		<article>
-			<h3 class="h5"><a href="/news/office-of-inclusive-services-at-the-university-of-colorado-colorado-springs-awarded-national-program-accreditation/">Office of Inclusive Services at the University of Colorado Colorado Springs
-				Awarded National Program Accreditation</a></h3>
-			<p><small>May 30, 2024</small><br>
-				The Inclusive Higher Education Accreditation Council (IHEAC), an accrediting agency for postsecondary programs for students with intellectual disability (ID), announces the full accreditation of the Office of Inclusive Services (OIS) at the University of Colorado Colorado Springs (UCCS) for the next seven years. OIS becomes the second inclusive postsecondary program in the United States to be accredited by the new </p>
-		</article>
-		<hr>
-		<article>
-			<h3 class="h5"><a href="https://youtu.be/tlYwVkKYY6A">Accreditation conversation with Dr. Kelly Kelley and Dr. Mary Judge Diegert</a></h3>
-			<p><small>Jul 12, 2023</small><br>
-			Interview with Western Carolina University Up Program Director Kelly Kelley, PhD. Dr. Kelley provides insight and useful tips as the leader of the first accredited program.</p>
-		</article>
-<hr>
-<article>
-	<h3 class="h5"><a href="https://weaveeducation.com/podcast/breaking-barriers-accrediting-for-inclusion-with-dr-martha-mock/">PODCAST - Breaking Barriers: Accrediting for Inclusion with Dr. Martha Mock</a></h3>
-	<blockquote>
-	On this episode, Dr. Martha Mock, professor and director of the Center for Disability and Education at University of Rochester and chair of Think College National Coordinating Center Accreditation Workgroup, joins us to share what the workgroup has been doing to develop and launch accrediting processes for these students.
-	
-	</blockquote>
-</article>
-<hr>
-		<article>
-			<h3 class="h5"><a href="/news/first/">Western Carolina University University Participant Program First Postsecondary Program for Students with Intellectual Disability to be Accredited by New Agency</a></h3>
-			<p><small>May 10, 2023</small></p>
-			<p>Boston, MA — May 10, 2023 — The Institute for Community Inclusion's (ICI) Think College and the Inclusive Higher Education Accreditation Council (IHEAC), a new accrediting agency for postsecondary programs for students with intellectual disability…</p>
-		</article>
-	<hr>
-		<article>
-			<h3 class="h5"><a href="/news/launch/">ICI's Think College Launches Accreditation Agency for Inclusive Higher Education</a></h3>
-			<p><small>April 5, 2023</small></p>
-			<p>Boston, Ma. — Think College, a center within the Institute for Community Inclusion (ICI) at the University of Massachusetts Boston, announced today the launch of the Inclusive Higher Education Accreditation Council (IHEAC), a new accrediting agency…</p>
-		</article>
-	<hr>
-		<article>
-			<h3 class="h5"><a href="https://www.insidehighered.com/news/2023/03/27/accreditor-emerging-intellectual-disabilities-programs">Ensuring Quality Programs for Students With Intellectual Disabilities</a></h3>
-			<p><small>March 26, 2023</small></p>
-			<p>An emerging accreditor aims to set standards for evaluating the growing number of programs for students long underserved in higher education.</p>
-		</article>
-
-
-	</div>
-</section>
+{% include 'news.njk' %} 
 
 
 
